<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory Manager</string>

    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="empty_view_title_text">No products in stock</string>

    <string name="empty_view_subtitle_text">Tap the button below to add a product</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="empty_product_image">Please add a product image</string>

    <string name="empty_product_name">Please add a name</string>

    <string name="empty_product_quantity">Please add a quantity</string>

    <string name="empty_product_price">Please add a price</string>

    <string name="empty_product_email">Please add an e-mail address</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="delete_all_dialog_msg">Delete all products?</string>

    <string name="delete_dialog_msg">Delete product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="hint_product_name">Name</string>

    <string name="hint_product_quantity">Quantity</string>

    <string name="hint_product_price">Price</string>

    <string name="editor_choose_action">Choose action</string>

    <string name="quantity_format">Quantity: %1$s</string>

    <string name="price_format">Price: %1$s</string>

    <string name="list_item_sale_button">Sale</string>

    <string name="hint_supplier_email">Supplier e-mail</string>

    <string name="category_product_details">Product details</string>

    <string name="category_modify_quantity">Modify quantity</string>

    <string name="category_contact_supplier">Contact supplier</string>

    <string name="order_more_button">Order more</string>

</resources>
